--- a/frontend/src/Main/Main.css
+++ b/frontend/src/Main/Main.css
@@ -1,5 +1,18 @@
 .Main {
   width: 90%;
-  text-align: center;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.imgLogo {
+  width: 1200px;
+  height: 450px;
+  border: 2px solid black;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
