--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -4,4 +4,7 @@
   font-size: 30px;
   background-color: rgb(200, 174, 224);
   font-size:23px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
