--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,6 @@ code {
     monospace;
 }
 
-.mainWindow{
-  padding-top: 120px !important;
-}
+/* .mainWindow{
+  padding-top: 100px !important;
+} */
