--- a/frontend/src/Main/Main.css
+++ b/frontend/src/Main/Main.css
@@ -1,18 +1,27 @@
 .Main {
-  width: 90%;
+  width: 100%;
+  height: 800px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.kid {
+  color: white;
+  font-size: 120px;
+  font-weight: 800;
 }
 .imgLogo {
-  width: 1200px;
-  height: 450px;
-  border: 2px solid black;
+  width: 600px;
+  height: 100px;
   border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
