--- a/frontend/src/Components/Game/style.css
+++ b/frontend/src/Components/Game/style.css
@@ -15,6 +15,15 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  flex-direction: column;
+}
+
+.image{
+  height: 300px;
+}
+
+.needPlace{
+  height: 50px;
 }
 
 /* div{
