--- a/frontend/src/Components/Main/Main.css
+++ b/frontend/src/Components/Main/Main.css
@@ -3,7 +3,7 @@
   height: 95vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   background-size: cover;
   background-repeat: no-repeat;
