--- a/frontend/src/Components/Game/style.css
+++ b/frontend/src/Components/Game/style.css
@@ -16,6 +16,7 @@
   justify-content: center;
   text-align: center;
   flex-direction: column;
+  box-shadow: 0 0 15px rgba(0,0,0,0.5);;
 }
 
 .image{
