--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -5,18 +5,14 @@
     align-items: center;
     padding: 30px;
     margin: 30px;
-    width: 90%;
-    height: 85%;
-<<<<<<< HEAD
-    border: 1px solid black;
+    width: 70%;
+    height: 75%;
     border-radius: 4px;
-=======
-    border-radius: 15px;
->>>>>>> decd0c6535b374c0ca68f39e23e7b6bfc927135e
     position: fixed;
     top: 40px;
-    left: 3%;
+    left: 15%;
     background-color: rgb(99, 126, 161);
+  font-size: 70%;
 }
 
 .boy2 {
@@ -41,10 +37,17 @@
   background-size: cover;
 }
 
-.close  {
+.exit {
+  display: flex;
+  justify-content: flex-end;
+  width: 95%;
+  cursor: pointer;
+}
+
+/* .close  {
   border-radius: 7px;
   width: 13%;
   height: 5%;
   background: rgb(8, 145, 236) linear-gradient(rgb(3, 255, 242),
    rgb(23, 91, 248));
-} 
+}  */
