--- a/frontend/src/Components/Contacts/Contacts.css
+++ b/frontend/src/Components/Contacts/Contacts.css
@@ -6,13 +6,11 @@
   margin: 30px;
   width: 70%;
   height: 75%;
-  /* border: 1px solid black; */
   border-radius: 4px;
   position: fixed;
   top: 40px;
   left: 15%;
-  background-color: rgb(46, 79, 122);
-  /* margin-top: 11.5mm; */
+  background-color: rgb(99, 126, 161);
 }
 
 .insta {
@@ -37,18 +35,7 @@
   width: 100%;
   justify-content:space-around ;
   flex-direction: row
-  /* margin-bottom: 30mm;
-  margin-top:15mm; */
-
 }
-
-.close  {
-  border-radius: 7px;
-  width: 13%;
-  height: 5%;
-  background: rgb(8, 145, 236) linear-gradient(rgb(3, 255, 242),
-   rgb(23, 91, 248));
-}  
 
 .Adres {
   display: flex;
@@ -60,9 +47,17 @@
   display: flex;
   justify-content: flex-end;
   width: 95%;
- cursor: pointer;
+  cursor: pointer;
 }
 
 .card {
-margin-bottom: 40px;
+  margin-bottom: 40px;
 }
+
+/* .close  {
+  border-radius: 7px;
+  width: 13%;
+  height: 5%;
+  background: rgb(8, 145, 236) linear-gradient(rgb(3, 255, 242),
+   rgb(23, 91, 248));
+}   */
