--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -1,4 +1,5 @@
 .About {
+  margin-top: 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -37,11 +38,13 @@
   background-size: cover;
 }
 
-.exit {
+.exit2 {
   display: flex;
   justify-content: flex-end;
-  width: 95%;
+  width: 100%;
   cursor: pointer;
+  margin-top: -58px;
+  font-size: 150%;
 }
 
 /* .close  {
