--- a/frontend/src/Components/Game/style.css
+++ b/frontend/src/Components/Game/style.css
@@ -1,30 +1,102 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bad+Script&family=Caveat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
+/* <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"> */
+
 
 
 .blackboard{
-  height: 455px;
-  width: 650px;
-  background-image: url("./images/board2.png");
-  background-size: 100%;
-  padding: 28px;
+  height: 597px;
+  width: 1000px;
+  background-image: url("./images/board1.png");
+  background-size: contain;
+  padding-top: 50px;
+  padding-left: 135px;
+  padding-right: 125px;
+  padding-bottom: 115px;
   color: white;
-  font-size: 28px;
+  font-size: 45px;
   font-family: 'Bad Script', cursive;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  box-shadow: 0 0 15px rgba(0,0,0,0.5);;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -60px;
+  border-radius: 3px;
 }
 
 .image{
-  height: 300px;
+  height: 350px;
 }
 
 .needPlace{
   height: 50px;
+}
+
+.gamefield{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.jumbotron1{
+  width: 100%;
+  background-image: url("./images/back1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  color: white;
+  /* background: linear-gradient(#5fbee4, #54bd65)  */
+}
+
+.statistic{
+  width: 400px;
+  height: 350px;
+  padding: 25px;
+  padding-top: 127px;
+  background-image: url("./images/pic5.png");
+  background-size: 100%;
+  position: relative;
+  border-radius: 10px;
+  margin-right: -500px;
+  color:black;
+  font-size: 35px;
+  font-family: 'Caveat', cursive;
+  
+  /* display: flex; */
+  /* align-items: center; */
+
+  /* box-shadow: 0 0 15px rgba(0,0,0,0.5); */
+
+}
+
+.answer{
+  z-index: 2;
+  margin: -25px;
+  width: 740px;
+  height: 500px;
+  background-image: url("./images/paper.png");
+  background-size: contain;
+  padding: 10px;
+  border-radius: 10px;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top:70px;
+  font-family: 'Caveat', cursive;
+  font-size: 30px;
+}
+
+.boards{
+  display: flex;
+  /* flex-direction: column */
 }
 
 /* div{
