--- a/frontend/src/Components/Modal/Modal.css
+++ b/frontend/src/Components/Modal/Modal.css
@@ -1,14 +1,17 @@
 .Modal {
   width: 500px;
-  height: 250px;
+  height: 260px;
   position: absolute;
   left: 50%;
   top: 50%;
   margin-left: -250px;
-  margin-top: -150px;
+  margin-top: -170px;
   background-color: rgb(152, 180, 212);
   border-radius: 10px;
   padding: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center
 
 }
 
@@ -27,6 +30,6 @@
 .bodyAllModal {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height:100%;
    background: rgba(0, 0, 0, 0.801);
 }
