--- a/frontend/src/Components/Game/style.css
+++ b/frontend/src/Components/Game/style.css
@@ -15,7 +15,7 @@
   padding-right: 125px;
   padding-bottom: 115px;
   color: white;
-  font-size: 45px;
+  font-size: 40px;
   font-family: 'Bad Script', cursive;
   display: flex;
   align-items: center;
@@ -57,15 +57,16 @@
   width: 400px;
   height: 350px;
   padding: 25px;
-  padding-top: 127px;
+  padding-top: 111px;
   background-image: url("./images/pic5.png");
   background-size: 100%;
   position: relative;
   border-radius: 10px;
   margin-right: -500px;
   color:black;
-  font-size: 35px;
+  font-size: 36px;
   font-family: 'Caveat', cursive;
+  text-align: center;
   
   /* display: flex; */
   /* align-items: center; */
@@ -92,12 +93,42 @@
   padding-top:70px;
   font-family: 'Caveat', cursive;
   font-size: 30px;
+  line-height: 110%;
+  
 }
 
 .boards{
   display: flex;
   /* flex-direction: column */
 }
+
+.btn-info{
+  font-size: 30px !important;
+  margin-top: 25px;
+  border: 3px solid black !important;
+  background: rgb(183, 26, 26) !important;
+}
+
+.submitform{
+  font-size: 25px !important;
+  vertical-align:middle !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items:center !important;
+
+  /* padding:0px !important; */
+  /* height: 55px !important; */
+
+}
+.btn-secondary{
+  margin-bottom: 8px !important
+}
+
+.progress{
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
 
 /* div{
   font-family: 'Caveat', cursive;
