--- a/frontend/src/Components/Modal/Modal.css
+++ b/frontend/src/Components/Modal/Modal.css
@@ -24,6 +24,7 @@
 }
 
 .TextError {
+  margin: -30px;
   color: rgb(190, 41, 41)
 }
 
@@ -32,4 +33,8 @@
   width: 100%;
   height:100%;
    background: rgba(0, 0, 0, 0.801);
+}
+.modalform{
+  display: flex;
+  flex-direction: column;
 }
