--- a/frontend/src/Components/Game/style.css
+++ b/frontend/src/Components/Game/style.css
@@ -67,12 +67,6 @@
   font-size: 36px;
   font-family: 'Caveat', cursive;
   text-align: center;
-  
-  /* display: flex; */
-  /* align-items: center; */
-
-  /* box-shadow: 0 0 15px rgba(0,0,0,0.5); */
-
 }
 
 .answer{
@@ -99,7 +93,6 @@
 
 .boards{
   display: flex;
-  /* flex-direction: column */
 }
 
 .btn-info{
@@ -115,10 +108,6 @@
   display: flex !important;
   justify-content: center !important;
   align-items:center !important;
-
-  /* padding:0px !important; */
-  /* height: 55px !important; */
-
 }
 .btn-secondary{
   margin-bottom: 8px !important
@@ -129,8 +118,21 @@
   margin-right: 70px;
 }
 
+.checkbutton{
+  height: 70px;
+  width: 71px;
+  background-color: rgba(0, 255, 255, 0);
+  background-image: url('./images/galochka_2.png');
+  background-size: 100%;
+  position: relative;
+  border: 0px;
+  margin-bottom:30px;
+  margin-left: 4px;
+  font-size: 50px;
+}
 
-/* div{
+/* 
+.checkbutton{
   font-family: 'Caveat', cursive;
   font-family: 'Caveat', cursive;
 } */
